crates/lang/tests/ui/contract/pass/config-dynamic-storage-allocator-false.rs
use ink_lang as ink;

#[ink::contract(dynamic_storage_allocator = true)]
mod contract {
    #[ink(storage)]
    pub struct Contract {}

    impl Contract {
        #[ink(constructor)]
        pub fn constructor() -> Self {
            Self {}
        }

        #[ink(message)]
        pub fn message(&self) {}
    }
}

fn main() {}
